syntax = "proto3";

package greeting;

option java_package = "com.proto.greeting";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetingRequest {
    Greeting greeting = 1;
}

message GreetingResponse {
    string result = 1;
}

service GreetingService {

//    Unary
    rpc Greet(GreetingRequest) returns (GreetingResponse) {};

//    Server streaming
    rpc GreetStreamServer(GreetingRequest) returns (stream GreetingResponse) {};

//    Client streaming
    rpc GreetStreamClient(stream GreetingRequest) returns (GreetingResponse) {};
}
